manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vtuber-playlist
  labels:
    app: vtuber-playlist
spec:
  replicas: 2
  template:
    metadata:
      name: vtuber-playlist
      labels:
        app: vtuber-playlist
    spec:
      containers:
        - name: vtuber-playlist
          image: registry.cn-hangzhou.aliyuncs.com/incubator4/vtuber-playlist
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 200Mi
      restartPolicy: Always
  selector:
    matchLabels:
      app: vtuber-playlist
