manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vtuber-playlist
  labels:
    app.kubernetes.io/name: vtuber-playlist
spec:
  selector:
    app: vtuber-playlist
  ports:
    - port: 80
      name: http
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
